--- a/Portifolio/css/custom.css
+++ b/Portifolio/css/custom.css
@@ -1,22 +1,153 @@
-#main-nav .navbar-brand {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+}
+
+section {
+  padding: 6rem 0;
+}
+
+section h2 {
+  font-size: 2.25rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 992px) {
+  section h2 {
+    font-size: 3rem;
+    line-height: 2.5rem;
+  }
+}
+.btn-xl {
+  padding: 1rem 1.75rem;
+  font-size: 1.25rem;
+}
+
+.scroll-to-top {
+  z-index: 1042;
+  right: 1rem;
+  bottom: 1rem;
+  display: none;
+}
+
+.scroll-to-top a {
+  width: 3.5rem;
+  height: 3.5rem;
+  line-height: 3.1rem;
+}
+
+#main-nav {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 700;
+}
+
+#main-nav .navbar-brand a {
   color: #fff;
 }
 
-#main-nav .navbar-nav li.nav-item a.nav-link {
-  color: #fff;
-}
-
-#main-nav .navbar-nav li.nav-item a.nav-link:hover {
+#main-nav .navbar-brand a:hover {
   color: #007bff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link {
+  color: #fff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:hover {
+  color: #007bff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:active,
+#mainNav .navbar-nav li.nav-item a.nav-link:focus {
+  color: #fff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link.active {
+  color: #007bff;
+}
+
+#main-nav .navbar-toggler {
+  font-size: 1rem;
+  color: #fff;
+}
+
+@media (min-width: 992px) {
+  #main-nav {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
+    transition: padding-top 0.3s, padding-bottom 0.3s;
+  }
+
+  #main-nav .navbar-brand {
+    font-size: 2em;
+    -webkit-transition: font-size 0.3s;
+    -moz-transition: font-size 0.3s;
+    transition: font-size 0.3s;
+  }
+
+  #main-nav .navbar-nav {
+    margin-top: 0;
+  }
+
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
+    color: #fff;
+    background: #007bff;
+  }
+
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active,
+#mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus,
+#mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
+    color: #fff;
+    background: #007bff;
+  }
+
+  #main-nav.navbar-shrink {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  #main-nav.navbar-shrink .navbar-brand {
+    font-size: 1.5em;
+  }
+}
+header.masthead {
+  padding-top: calc(3rem + 42px);
+  padding-bottom: 2rem;
+}
+
+@media (min-width: 992px) {
+  header.masthead {
+    padding-top: calc(3rem + 76px);
+  }
+}
+.portfolio {
+  margin-bottom: -15px;
 }
 
 .portfolio .portfolio-item {
   position: relative;
   display: block;
   max-width: 25rem;
+  padding-bottom: 2rem;
   margin-bottom: 15px;
 }
 
+@media (min-width: 576px) {
+  .portfolio {
+    margin-bottom: -30px;
+  }
+
+  .portfolio .portfolio-item {
+    margin-bottom: 30px;
+  }
+}
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
